Use "--add-opens" to allow test to run on java 16+ (#5290)
* Use "--add-opens" to allow test to run on java 16+

* Update instrumentation/executors/javaagent/build.gradle.kts

Co-authored-by: Lauri Tulmin <tulmin@gmail.com>

* Update instrumentation/executors/javaagent/build.gradle.kts

Co-authored-by: Anuraag Agrawal <anuraaga@gmail.com>
Co-authored-by: Lauri Tulmin <tulmin@gmail.com>